fix:small gap in Art section fixed with adding height:100% to .box

--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ h2 {
 }
 
 .box {
+    height: 100%;
     position: relative;
     float: left;
     margin: 0px 25px;
